# bazel-monorepo

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  .pre-commit-config.yaml  ADDING_CHECKSUMS.md  BEST_PRACTICES_REPORT.md  BUILD  BUILD_DOCS_SUMMARY.md  BUILD_GUIDE.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  COVERAGE_HTML_GUIDE.md  DEPENDENCY_GRAPHS.md  DOCS.md  JUNIT5_SETUP.md  LICENSE  MODULE.bazel  QUALITY_METRICS.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SONARQUBE_SETUP.md  TEST_COVERAGE_REPORT.md  WORKSPACE  dependency_diagram.drawio  dependency_graph.csv  dependency_graph.dot  dependency_graph.json  dependency_graph.mmd  dependency_graph_simple.dot  generate_coverage_report.sh  get_checksums.sh  rules_jvm_external++maven+maven_install.json  run_sonarqube_analysis.sh  sonar-project.properties
.claude/: README.md  settings.local.json  skills.yaml
.github/workflows/: ci.yml
docs/: _config.yml  ci.md  developer-guide.md  index.html  index.md  targets.md  tests.md
low-level-1/: BUILD  publish-to-maven-local.sh
low-level-1/src/main/java/com/acme/arc/dep/test/: LowOneMain.java
low-level-1/src/test/java/com/acme/arc/dep/test/: LowOneMainTest.java
top-level-1/: BUILD
top-level-1/src/main/java/com/acme/arc/dep/test/: Main.java
top-level-1/src/test/java/com/acme/arc/dep/test/: MainTest.java
