module(
    name = "composite-monorepo",
    version = "2.0.0",
)

# rules_java is required for java_library, java_binary, java_test in Bazel 9
bazel_dep(name = "rules_java", version = "9.3.0")

# Gazelle - automatic BUILD file generator
bazel_dep(name = "gazelle", version = "0.47.0")

# Override rules_go to a Bazel 9-compatible version (transitive dep of Gazelle)
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")

# Contributed JVM rules with Gazelle Java extension
bazel_dep(name = "contrib_rules_jvm", version = "0.32.0")

# Maven dependency management (transitive dep of contrib_rules_jvm, declared explicitly for maven extension)
bazel_dep(name = "rules_jvm_external", version = "6.7")

# Maven dependencies via rules_jvm_external
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:5.10.1",
        "org.junit.jupiter:junit-jupiter-engine:5.10.1",
        "org.junit.platform:junit-platform-console-standalone:1.10.1",
        "org.junit.platform:junit-platform-commons:1.10.1",
        "org.junit.platform:junit-platform-engine:1.10.1",
        "org.junit.platform:junit-platform-launcher:1.10.1",
        "org.junit.platform:junit-platform-reporting:1.10.1",
        "org.opentest4j:opentest4j:1.3.0",
        "org.apiguardian:apiguardian-api:1.1.2",
    ],
    lock_file = "//:rules_jvm_external++maven+maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
